--- a/AAAMLP/c1.ipynb
+++ b/AAAMLP/c1.ipynb
@@ -932,6 +932,13 @@
     "- 神经网络中，尤其是数据集很小，网络很大，会发生训练集和测试集很快到了最小loss，之后训练的loss可能继续减小，但是测试loss反而增加。\n",
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "add"
+   ]
   }
  ],
  "metadata": {
