--- a/AAAMLP/c1.ipynb
+++ b/AAAMLP/c1.ipynb
@@ -932,6 +932,318 @@
     "- 神经网络中，尤其是数据集很小，网络很大，会发生训练集和测试集很快到了最小loss，之后训练的loss可能继续减小，但是测试loss反而增加。\n",
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "KFold(n_splits=5, random_state=None, shuffle=False)"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import model_selection\n",
+    "model_selection.KFold(n_splits=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fixed acidity</th>\n",
+       "      <th>volatile acidity</th>\n",
+       "      <th>citric acid</th>\n",
+       "      <th>residual sugar</th>\n",
+       "      <th>chlorides</th>\n",
+       "      <th>free sulfur dioxide</th>\n",
+       "      <th>total sulfur dioxide</th>\n",
+       "      <th>density</th>\n",
+       "      <th>pH</th>\n",
+       "      <th>sulphates</th>\n",
+       "      <th>alcohol</th>\n",
+       "      <th>quality</th>\n",
+       "      <th>kfold</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6.1</td>\n",
+       "      <td>0.590</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0.056</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>0.99472</td>\n",
+       "      <td>3.52</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>11.4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>8.7</td>\n",
+       "      <td>0.290</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>1.6</td>\n",
+       "      <td>0.113</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>0.99690</td>\n",
+       "      <td>3.25</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>12.5</td>\n",
+       "      <td>0.280</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>2.3</td>\n",
+       "      <td>0.082</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>0.99970</td>\n",
+       "      <td>3.11</td>\n",
+       "      <td>1.36</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>8.3</td>\n",
+       "      <td>0.430</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>0.079</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>0.99788</td>\n",
+       "      <td>3.36</td>\n",
+       "      <td>0.61</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>9.9</td>\n",
+       "      <td>0.570</td>\n",
+       "      <td>0.25</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.104</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>0.99630</td>\n",
+       "      <td>3.04</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>10.1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1594</th>\n",
+       "      <td>7.2</td>\n",
+       "      <td>0.480</td>\n",
+       "      <td>0.07</td>\n",
+       "      <td>5.5</td>\n",
+       "      <td>0.089</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>0.99684</td>\n",
+       "      <td>3.37</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>11.2</td>\n",
+       "      <td>7</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1595</th>\n",
+       "      <td>6.2</td>\n",
+       "      <td>0.360</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>2.2</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>0.99460</td>\n",
+       "      <td>3.57</td>\n",
+       "      <td>0.57</td>\n",
+       "      <td>11.7</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1596</th>\n",
+       "      <td>7.5</td>\n",
+       "      <td>0.630</td>\n",
+       "      <td>0.27</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.083</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>0.99616</td>\n",
+       "      <td>3.26</td>\n",
+       "      <td>0.58</td>\n",
+       "      <td>9.8</td>\n",
+       "      <td>6</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1597</th>\n",
+       "      <td>9.3</td>\n",
+       "      <td>0.390</td>\n",
+       "      <td>0.44</td>\n",
+       "      <td>2.1</td>\n",
+       "      <td>0.107</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>0.99780</td>\n",
+       "      <td>3.14</td>\n",
+       "      <td>1.22</td>\n",
+       "      <td>9.5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1598</th>\n",
+       "      <td>7.0</td>\n",
+       "      <td>0.805</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.068</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>0.99690</td>\n",
+       "      <td>3.48</td>\n",
+       "      <td>0.56</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1599 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      fixed acidity  volatile acidity  citric acid  residual sugar  chlorides  \\\n",
+       "0               6.1             0.590         0.01             2.1      0.056   \n",
+       "1               8.7             0.290         0.52             1.6      0.113   \n",
+       "2              12.5             0.280         0.54             2.3      0.082   \n",
+       "3               8.3             0.430         0.30             3.4      0.079   \n",
+       "4               9.9             0.570         0.25             2.0      0.104   \n",
+       "...             ...               ...          ...             ...        ...   \n",
+       "1594            7.2             0.480         0.07             5.5      0.089   \n",
+       "1595            6.2             0.360         0.24             2.2      0.095   \n",
+       "1596            7.5             0.630         0.27             2.0      0.083   \n",
+       "1597            9.3             0.390         0.44             2.1      0.107   \n",
+       "1598            7.0             0.805         0.00             2.5      0.068   \n",
+       "\n",
+       "      free sulfur dioxide  total sulfur dioxide  density    pH  sulphates  \\\n",
+       "0                     5.0                  13.0  0.99472  3.52       0.56   \n",
+       "1                    12.0                  37.0  0.99690  3.25       0.58   \n",
+       "2                    12.0                  29.0  0.99970  3.11       1.36   \n",
+       "3                     7.0                  34.0  0.99788  3.36       0.61   \n",
+       "4                    12.0                  89.0  0.99630  3.04       0.90   \n",
+       "...                   ...                   ...      ...   ...        ...   \n",
+       "1594                 10.0                  18.0  0.99684  3.37       0.68   \n",
+       "1595                 19.0                  42.0  0.99460  3.57       0.57   \n",
+       "1596                 17.0                  91.0  0.99616  3.26       0.58   \n",
+       "1597                 34.0                 125.0  0.99780  3.14       1.22   \n",
+       "1598                  7.0                  20.0  0.99690  3.48       0.56   \n",
+       "\n",
+       "      alcohol  quality  kfold  \n",
+       "0        11.4        5      0  \n",
+       "1         9.5        5      0  \n",
+       "2         9.8        7      0  \n",
+       "3        10.5        5      0  \n",
+       "4        10.1        5      0  \n",
+       "...       ...      ...    ...  \n",
+       "1594     11.2        7      4  \n",
+       "1595     11.7        6      4  \n",
+       "1596      9.8        6      4  \n",
+       "1597      9.5        5      4  \n",
+       "1598      9.6        5      4  \n",
+       "\n",
+       "[1599 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn import model_selection\n",
+    "\n",
+    "df = pd.read_csv(\"winequality-red.csv\")\n",
+    "df['kfold'] = -1\n",
+    "df = df.sample(frac=1).reset_index(drop=True)\n",
+    "kf = model_selection.KFold(n_splits=5)\n",
+    "for fold, (trn_, val_) in enumerate(kf.split(X=df)):\n",
+    "    df.loc[val_, 'kfold'] = fold\n",
+    "df"
+   ]
   }
  ],
  "metadata": {
