--- a/AAAMLP/c1.ipynb
+++ b/AAAMLP/c1.ipynb
@@ -1244,6 +1244,18 @@
     "    df.loc[val_, 'kfold'] = fold\n",
     "df"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "aaa"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
