--- a/AAAMLP/c1.ipynb
+++ b/AAAMLP/c1.ipynb
@@ -2262,6 +2262,187 @@
    "source": [
     "![image.png](attachment:image.png)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GroupKFold.\n",
+    "- 比如有通过患者的皮肤图片判断是否是皮肤癌的问题，同一个患者可能有多个图片，因此，同一个患者的图片只能出现在测试集或者只能在训练集。因此引入了groupKFold"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluation metrics\n",
+    "- 准确率： 预测的准确值/总值 问题：当数据是skewed data时，比如positive:negetive = 9:1, 只要预测全部对，就能得到90%的准确率。因此准确率只适合均匀分布的数据\n",
+    "- TP/TN FP/FN, 预测的对不对是true or false, 类的划分是预测的是positive or negative. 正例预测对了是TP, 预测的是负例且对了是TN\n",
+    "- Precision 预测为正例的结果中，为预测为正例中正确的有多少 TP/TP+FP\n",
+    "- Recall 实际上所有的正例中，预测对了的有多少， TP/TP+FN , FN就是实际上是正例，但预测错了。因此为FN."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy(y_true, y_pred):\n",
+    "    acc_count = 0\n",
+    "    for yt, yp in zip(y_true, y_pred):\n",
+    "        if yt == yp:\n",
+    "            acc_count += 1\n",
+    "    return acc_count/len(y_true)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.625"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn import metrics\n",
+    "l1 = [0,1,1,1,0,0,0,1]\n",
+    "l2 = [0,1,0,1,0,1,0,0]\n",
+    "metrics.accuracy_score(l1, l2)\n",
+    "# accuracy(l1, l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def true_positive(y_true, y_pred):\n",
+    "    tp = 0\n",
+    "    for yt, yp in zip(y_true, y_pred):\n",
+    "        if yt == yp and yp == 1:\n",
+    "            tp += 1\n",
+    "    return tp\n",
+    "\n",
+    "def true_negative(y_true, y_pred):\n",
+    "    tn = 0\n",
+    "    for yt, yp in zip(y_true, y_pred):\n",
+    "        if yt == yp and yp == 0:\n",
+    "            tn += 1\n",
+    "    return tn\n",
+    "\n",
+    "def false_positive(y_true, y_pred):\n",
+    "    fp = 0\n",
+    "    for yt, yp in zip(y_true, y_pred):\n",
+    "        if yt != yp and yp == 1:\n",
+    "            fp += 1\n",
+    "    return fp\n",
+    "\n",
+    "def false_negative(y_true, y_pred):\n",
+    "    fn = 0\n",
+    "    for yt, yp in zip(y_true, y_pred):\n",
+    "        if yt != yp and yp == 0:\n",
+    "            fn += 1\n",
+    "    return fn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2, 1, 2, 3)"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "l1 = [0,1,1,1,0,0,0,1]\n",
+    "l2 = [0,1,0,1,0,1,0,0]\n",
+    "true_positive(l1, l2), false_positive(l1, l2), false_negative(l1, l2), true_negative(l1, l2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def accuracy_v2(y_true, y_pred):\n",
+    "    \"\"\"\n",
+    "    Function to calculate accuracy using tp/tn/fp/fn\n",
+    "    :param y_true: list of true values\n",
+    "    :param y_pred: list of predicted values\n",
+    "    :return: accuracy score\n",
+    "    \"\"\"\n",
+    "    tp = true_positive(y_true, y_pred)\n",
+    "    fp = false_positive(y_true, y_pred)\n",
+    "    fn = false_negative(y_true, y_pred)\n",
+    "    tn = true_negative(y_true, y_pred)\n",
+    "    accuracy_score = (tp + tn) / (tp + tn + fp + fn)\n",
+    "    return accuracy_score"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let’s say we make a new model on the new skewed dataset and our model correctly\n",
+    "identified 80 non-pneumothorax out of 90 and 8 pneumothorax out of 10. Thus, we\n",
+    "identify 88 images out of 100 successfully. The accuracy is, therefore, 0.88 or 88%.\n",
+    "\n",
+    "Thus, we have:\n",
+    "TP : 8\n",
+    "TN: 80\n",
+    "FP: 10\n",
+    "FN: 2\n",
+    "So, our precision is 8 / (8 + 10) = 0.444."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.5, 0.6666666666666666)"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def precision(y_true, y_pred):\n",
+    "    tp = true_positive(y_true, y_pred)\n",
+    "    fp = false_positive(y_true, y_pred)\n",
+    "    return tp/(tp+fp)\n",
+    "\n",
+    "def recall(y_true, y_pred):\n",
+    "    tp = true_positive(y_true, y_pred)\n",
+    "    fn = false_negative(y_true, y_pred)\n",
+    "    return tp/(tp+fn)\n",
+    "\n",
+    "recall(l1, l2), precision(l1, l2)"
+   ]
   }
  ],
  "metadata": {
