--- a/AAAMLP/c2.ipynb
+++ b/AAAMLP/c2.ipynb
@@ -2652,7 +2652,12 @@
     "\n",
     "- target encoding\n",
     "- 可能overfit\n",
-    "- 每次计算一个folder，将valid数据集加上新feature， feature的值为train集的mean，所有folder算完，刚好得到了加了新feature的数据集"
+    "- 每次计算一个folder，将valid数据集加上新feature， feature的值为train集的mean，所有folder算完，刚好得到了加了新feature的数据集\n",
+    "- When we use target encoding, it’s better to use some kind of smoothing or adding noise in the encoded values\n",
+    "\n",
+    "link: \n",
+    "one-hot encoding不是万能的，这些分类变量编码方法你值得拥有 - 机器之心的文章 - 知乎\n",
+    "https://zhuanlan.zhihu.com/p/248763414"
    ]
   },
   {
@@ -2760,7 +2765,7 @@
     "        for column in features:\n",
     "            # create dict of category:mean target\n",
     "            mapping_dict = dict(\n",
-    "                df_train.groupby(column)[\"income\"].mean()\n",
+    "                df_train.groupby(column)[\"income\"].mean() ## 此处是不是可以按income分布，去抽样，而不是单纯的用mean？？\n",
     "            )\n",
     "            # column_enc is the new column we have with mean encoding\n",
     "            df_valid.loc[:, column + \"_enc\"] = df_valid[column].map(mapping_dict)\n",
@@ -2811,6 +2816,234 @@
     "# run training and validation for 5 folds\n",
     "for fold_ in range(5):\n",
     "    run(df, fold_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### entity embeddings\n",
+    "用embedding的方式来将类型的数据转化为feature，应为onehot会导致feature数量暴增，因此考虑用embedding方式来做，"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-11-01 23:50:27.361976: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
+      "2023-11-01 23:50:27.386481: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-11-01 23:50:27.725405: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "/tmp/ipykernel_326676/768136296.py:99: DeprecationWarning: In a future version, `df.iloc[:, i] = newvals` will attempt to set the values inplace instead of always setting a new array. To retain the old behavior, use either `df[df.columns[i]] = newvals` or, if columns are non-unique, `df.isetitem(i, newvals)`\n",
+      "  df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+      "2023-11-01 23:50:30.737982: E tensorflow/compiler/xla/stream_executor/cuda/cuda_driver.cc:266] failed call to cuInit: CUDA_ERROR_UNKNOWN: unknown error\n",
+      "2023-11-01 23:50:30.738025: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:168] retrieving CUDA diagnostic information for host: frog-ubuntu\n",
+      "2023-11-01 23:50:30.738027: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:175] hostname: frog-ubuntu\n",
+      "2023-11-01 23:50:30.738083: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:199] libcuda reported version is: 535.98.0\n",
+      "2023-11-01 23:50:30.738089: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:203] kernel reported version is: 535.98.0\n",
+      "2023-11-01 23:50:30.738091: I tensorflow/compiler/xla/stream_executor/cuda/cuda_diagnostics.cc:309] kernel version seems to match DSO: 535.98.0\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/3\n",
+      "469/469 [==============================] - 17s 32ms/step - loss: 0.4743 - val_loss: 0.4140\n",
+      "Epoch 2/3\n",
+      "469/469 [==============================] - 15s 32ms/step - loss: 0.4087 - val_loss: 0.3978\n",
+      "Epoch 3/3\n",
+      "469/469 [==============================] - 15s 32ms/step - loss: 0.4023 - val_loss: 0.3988\n",
+      "3750/3750 [==============================] - 12s 3ms/step\n",
+      "0.7850974176701826\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import gc\n",
+    "import joblib\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn import metrics, preprocessing\n",
+    "from tensorflow.keras import layers\n",
+    "from tensorflow.keras import optimizers\n",
+    "from tensorflow.keras.models import Model, load_model\n",
+    "from tensorflow.keras import callbacks\n",
+    "from tensorflow.keras import backend as K\n",
+    "from tensorflow.keras import utils\n",
+    "\n",
+    "def create_model(data, catcols):\n",
+    "    \"\"\"\n",
+    "    This function returns a compiled tf.keras model\n",
+    "    for entity embeddings\n",
+    "    :param data: this is a pandas dataframe\n",
+    "    :param catcols: list of categorical column names\n",
+    "    :return: compiled tf.keras model\n",
+    "    \"\"\"\n",
+    "    # init list of inputs for embeddings\n",
+    "    inputs = []\n",
+    "    # init list of outputs for embeddings\n",
+    "    outputs = []\n",
+    "    # loop over all categorical columns\n",
+    "    for c in catcols:\n",
+    "        # find the number of unique values in the column\n",
+    "        num_unique_values = int(data[c].nunique())\n",
+    "        # simple dimension of embedding calculator\n",
+    "        # min size is half of the number of unique values\n",
+    "        # max size is 50. max size depends on the number of unique\n",
+    "        # categories too. 50 is quite sufficient most of the times\n",
+    "        # but if you have millions of unique values, you might need\n",
+    "        # a larger dimension\n",
+    "        embed_dim = int(min(np.ceil((num_unique_values)/2), 50))\n",
+    "        # simple keras input layer with size 1\n",
+    "        inp = layers.Input(shape=(1,))\n",
+    "        # add embedding layer to raw input\n",
+    "        # embedding size is always 1 more than unique values in input\n",
+    "        out = layers.Embedding(\n",
+    "            num_unique_values + 1, embed_dim, name=c\n",
+    "        )(inp)\n",
+    "        # 1-d spatial dropout is the standard for emebedding layers\n",
+    "        # you can use it in NLP tasks too\n",
+    "        out = layers.SpatialDropout1D(0.3)(out)\n",
+    "        # reshape the input to the dimension of embedding\n",
+    "        # this becomes our output layer for current feature\n",
+    "        out = layers.Reshape(target_shape=(embed_dim, ))(out)\n",
+    "        # add input to input list\n",
+    "        inputs.append(inp)\n",
+    "        # add output to output list\n",
+    "        outputs.append(out)\n",
+    "    # concatenate all output layers\n",
+    "    x = layers.Concatenate()(outputs)\n",
+    "    # add a batchnorm layer.\n",
+    "    # from here, everything is up to you\n",
+    "    # you can try different architectures\n",
+    "    # this is the architecture I like to use\n",
+    "    # if you have numerical features, you should add\n",
+    "    # them here or in concatenate layer\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    # a bunch of dense layers with dropout.\n",
+    "    # start with 1 or two layers only\n",
+    "    x = layers.Dense(300, activation=\"relu\")(x)\n",
+    "    x = layers.Dropout(0.3)(x)\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    x = layers.Dense(300, activation=\"relu\")(x)\n",
+    "    x = layers.Dropout(0.3)(x)\n",
+    "    x = layers.BatchNormalization()(x)\n",
+    "    # using softmax and treating it as a two class problem\n",
+    "    # you can also use sigmoid, then you need to use only one\n",
+    "    # output class\n",
+    "    y = layers.Dense(2, activation=\"softmax\")(x)\n",
+    "    # create final model\n",
+    "    model = Model(inputs=inputs, outputs=y)\n",
+    "    # compile the model\n",
+    "    # we use adam and binary cross entropy.\n",
+    "    # feel free to use something else and see how model behaves\n",
+    "    model.compile(loss='binary_crossentropy', optimizer='adam')\n",
+    "    return model\n",
+    "    \n",
+    "def run(fold):\n",
+    "    # load the full training data with folds\n",
+    "    df = pd.read_csv(\"./cat-in-the-dat-ii/train_folds.csv\")\n",
+    "    # all columns are features except id, target and kfold columns\n",
+    "    features = [\n",
+    "        f for f in df.columns if f not in (\"id\", \"target\", \"kfold\")\n",
+    "    ]\n",
+    "    # fill all NaN values with NONE\n",
+    "    # note that I am converting all columns to \"strings\"\n",
+    "    # it doesnt matter because all are categories\n",
+    "    for col in features:\n",
+    "        df.loc[:, col] = df[col].astype(str).fillna(\"NONE\")\n",
+    "    # encode all features with label encoder individually\n",
+    "    # in a live setting you need to save all label encoders\n",
+    "    for feat in features:\n",
+    "        lbl_enc = preprocessing.LabelEncoder()\n",
+    "        df.loc[:, feat] = lbl_enc.fit_transform(df[feat].values)\n",
+    "    # get training data using folds\n",
+    "    df_train = df[df.kfold != fold].reset_index(drop=True)\n",
+    "    # get validation data using folds\n",
+    "    df_valid = df[df.kfold == fold].reset_index(drop=True)\n",
+    "    # create tf.keras model\n",
+    "    model = create_model(df, features)\n",
+    "    # our features are lists of lists\n",
+    "    xtrain = [\n",
+    "        df_train[features].values[:, k] for k in range(len(features))\n",
+    "    ]\n",
+    "    xvalid = [\n",
+    "        df_valid[features].values[:, k] for k in range(len(features))\n",
+    "    ]\n",
+    "    # fetch target columns\n",
+    "    ytrain = df_train.target.values\n",
+    "    yvalid = df_valid.target.values\n",
+    "    # convert target columns to categories\n",
+    "    # this is just binarization\n",
+    "    ytrain_cat = utils.to_categorical(ytrain)\n",
+    "    yvalid_cat = utils.to_categorical(yvalid)\n",
+    "    # fit the model\n",
+    "    model.fit(xtrain,\n",
+    "        ytrain_cat,\n",
+    "        validation_data=(xvalid, yvalid_cat),\n",
+    "        verbose=1,\n",
+    "        batch_size=1024,\n",
+    "        epochs=3\n",
+    "    )\n",
+    "    # generate validation predictions\n",
+    "    valid_preds = model.predict(xvalid)[:, 1]\n",
+    "    # print roc auc score\n",
+    "    print(metrics.roc_auc_score(yvalid, valid_preds))\n",
+    "    # clear session to free up some GPU memory\n",
+    "    K.clear_session()\n",
+    "    \n",
+    "run(0)"
    ]
   }
  ],
