--- a/AAAMLP/c2.ipynb
+++ b/AAAMLP/c2.ipynb
@@ -3045,6 +3045,102 @@
     "    \n",
     "run(0)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## feature engineering\n",
+    "\n",
+    "日期"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_326676/616779436.py:11: FutureWarning: Series.dt.weekofyear and Series.dt.week have been deprecated. Please use Series.dt.isocalendar().week instead.\n",
+      "  \"weekofyear\": s.dt.weekofyear.values\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# create a series of datetime with a frequency of 10 hours\n",
+    "s = pd.date_range('2020-01-06', '2020-01-10', freq='10H').to_series()\n",
+    "# create some features based on datetime\n",
+    "features = {\n",
+    "    \"dayofweek\": s.dt.dayofweek.values,\n",
+    "    \"dayofyear\": s.dt.dayofyear.values,\n",
+    "    \"hour\": s.dt.hour.values,\n",
+    "    \"is_leap_year\": s.dt.is_leap_year.values,\n",
+    "    \"quarter\": s.dt.quarter.values,\n",
+    "    \"weekofyear\": s.dt.weekofyear.values\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'dayofweek': array([0, 0, 0, 1, 1, 2, 2, 2, 3, 3]),\n",
+       " 'dayofyear': array([6, 6, 6, 7, 7, 8, 8, 8, 9, 9]),\n",
+       " 'hour': array([ 0, 10, 20,  6, 16,  2, 12, 22,  8, 18]),\n",
+       " 'is_leap_year': array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
+       "         True]),\n",
+       " 'quarter': array([1, 1, 1, 1, 1, 1, 1, 1, 1, 1]),\n",
+       " 'weekofyear': array([2, 2, 2, 2, 2, 2, 2, 2, 2, 2])}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_features(df):\n",
+    "    # create a bunch of features using the date column\n",
+    "    df.loc[:, 'year'] = df['date'].dt.year\n",
+    "    df.loc[:, 'weekofyear'] = df['date'].dt.weekofyear\n",
+    "    df.loc[:, 'month'] = df['date'].dt.month\n",
+    "    df.loc[:, 'dayofweek'] = df['date'].dt.dayofweek\n",
+    "    df.loc[:, 'weekend'] = (df['date'].dt.weekday >=5).astype(int)\n",
+    "    # create an aggregate dictionary\n",
+    "    aggs = {}\n",
+    "    # for aggregation by month, we calculate the\n",
+    "    # number of unique month values and also the mean\n",
+    "    aggs['month'] = ['nunique', 'mean']\n",
+    "    aggs['weekofyear'] = ['nunique', 'mean']\n",
+    "    # we aggregate by num1 and calculate sum, max, min\n",
+    "    # and mean values of this column\n",
+    "    aggs['num1'] = ['sum','max','min','mean']\n",
+    "    # for customer_id, we calculate the total count\n",
+    "    aggs['customer_id'] = ['size']\n",
+    "    # again for customer_id, we calculate the total unique\n",
+    "    aggs['customer_id'] = ['nunique']\n",
+    "    # we group by customer_id and calculate the aggregates\n",
+    "    agg_df = df.groupby('customer_id').agg(aggs)\n",
+    "    agg_df = agg_df.reset_index()\n",
+    "    return agg_df"
+   ]
   }
  ],
  "metadata": {
